--- a/style/css/all.css
+++ b/style/css/all.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   font-size: 20px;
-  padding-top: 90px;
+  padding-top: 70px;
 }
 
 @media screen and (max-width: 768px) {
@@ -23,14 +23,15 @@
 }
 
 .school .info_box {
+  padding-top: 40px;
   padding-left: 130px;
   padding-right: 130px;
 }
 
 @media screen and (max-width: 1440px) {
   .school .info_box {
-    padding-left: 35px;
-    padding-right: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
@@ -41,7 +42,7 @@
 
 @media screen and (max-width: 1440px) {
   .about .info_box {
-    padding-left: 35px;
+    padding-left: 60px;
   }
 }
 
@@ -71,9 +72,9 @@
 
 .title {
   width: 100%;
-  height: 110px;
+  height: 80px;
   color: #fff;
-  font-size: 48px;
+  font-size: 45px;
   font-weight: bold;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -84,7 +85,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-shadow: 0 0 2px #000;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   /*@include w1280px{
 		font-size: 36px;
 		height: 80px;
@@ -100,7 +101,7 @@
   z-index: 1;
   left: 0;
   width: 100%;
-  height: 90px;
+  height: 70px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -115,7 +116,7 @@
 
 .header .logo {
   width: 185px;
-  height: 70px;
+  height: 50px;
   background: #000;
 }
 
@@ -178,6 +179,7 @@
   display: -ms-flexbox;
   display: flex;
   font-size: 20px;
+  height: 100%;
 }
 
 .header .menu li {
@@ -186,6 +188,12 @@
   -webkit-transition-duration: .3s;
           transition-duration: .3s;
   font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header .menu li::before,
@@ -193,9 +201,9 @@
   content: '';
   position: absolute;
   width: 50%;
-  height: 2px;
+  height: 1px;
   background: #EF7E00;
-  top: 80%;
+  top: 73%;
   -webkit-transition-duration: .3s;
           transition-duration: .3s;
 }
@@ -298,13 +306,13 @@
 .banner {
   position: relative;
   width: 100%;
-  height: calc( 100vh - 90px);
+  height: calc( 100vh - 70px);
   background: url("../../images/banner_bg.jpg") no-repeat center/cover;
 }
 
 .banner .banner_info {
   position: absolute;
-  top: 90px;
+  top: 80px;
   left: 170px;
 }
 
@@ -312,8 +320,14 @@
   width: 40%;
 }
 
-.banner .banner_txt {
-  margin-top: 50px;
+@media screen and (max-width: 1440px) {
+  .banner .banner_info img {
+    width: 38%;
+  }
+}
+
+.banner .banner_txt .p1 {
+  color: #3E3A39;
 }
 
 .banner .banner_txt .p1,
@@ -326,13 +340,25 @@
   font-size: 112px;
   font-weight: 700;
   color: #EF7E00;
+  margin-left: 5px;
 }
 
 .banner .banner_txt .p2 {
+  text-align: center;
   font-size: 36px;
   color: #867976;
   letter-spacing: 0.16em;
-  margin-top: 10px;
+  margin-top: 5px;
+}
+
+@media screen and (max-width: 1440px) {
+  .banner .banner_txt .p1,
+  .banner .banner_txt .s1 {
+    font-size: 50px;
+  }
+  .banner .banner_txt .p2 {
+    font-size: 34px;
+  }
 }
 
 .banner .banner_scoll {
@@ -343,8 +369,10 @@
   bottom: 10%;
   margin: 0 auto;
   font-size: 36px;
-  color: #fff;
-  font-weight: 700;
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .banner .banner_scoll::before {
@@ -397,15 +425,17 @@
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .date_block .date_num::after {
   content: attr(data-text);
   font-size: 20px;
   color: #000;
+  margin-left: 10px;
+  margin-bottom: 5px;
 }
 
 @media screen and (max-width: 1440px) {
@@ -442,7 +472,7 @@
 
 .flyer {
   width: 100%;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 70px);
   background: url("../../images/flyer/bg_flyer.png") no-repeat right bottom/contain, -webkit-gradient(linear, left top, right top, color-stop(-2.34%, #FFF3E6), color-stop(50.96%, #FFFFFF), color-stop(98.93%, #FFFFFF));
   background: url("../../images/flyer/bg_flyer.png") no-repeat right bottom/contain, linear-gradient(90deg, #FFF3E6 -2.34%, #FFFFFF 50.96%, #FFFFFF 98.93%);
 }
@@ -454,7 +484,7 @@
 
 .flyer .flyer_box {
   max-width: 510px;
-  height: calc(100% - 110px - 138px);
+  height: calc(100% - 80px - 110px);
   overflow: hidden;
   margin: auto;
 }
@@ -490,7 +520,7 @@
   position: relative;
   width: 100%;
   max-width: 1100px;
-  height: 138px;
+  height: 110px;
   background: #FFB057;
   margin: auto;
   display: -webkit-box;
@@ -512,8 +542,8 @@
   -webkit-box-flex: 0;
       -ms-flex: none;
           flex: none;
-  width: 90px;
-  height: 90px;
+  width: 80px;
+  height: 80px;
   margin: 10px;
   overflow: hidden;
   border-radius: 10px;
@@ -658,6 +688,11 @@
   padding: 2px 75px 2px 35px;
   font-size: 20px;
   font-weight: 700;
+  border-right: 2px solid #C4C4C4;
+}
+
+.school .school_name li:last-child {
+  border-right: none;
 }
 
 .school .school_name li::after {
@@ -678,16 +713,15 @@
     width: calc(100% / 3 - 50px);
     margin: 10px;
   }
+  .school .school_name li:nth-child(3) {
+    border-right: none;
+  }
 }
 
 @media screen and (max-width: 1024px) {
   .school .school_name li {
     padding: 2px 40px 2px 20px;
   }
-}
-
-.school .school_name li + li {
-  border-left: 2px solid #C4C4C4;
 }
 
 .school .school_int {
@@ -710,7 +744,7 @@
 .school .school_txt {
   position: absolute;
   max-width: 535px;
-  right: 5%;
+  right: 0;
   bottom: -5%;
 }
 
@@ -848,8 +882,8 @@
 }
 
 .about {
-  background: url("../../images/bg_about.png") no-repeat center/cover, -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.320899)), to(rgba(0, 0, 0, 0.244022)));
-  background: url("../../images/bg_about.png") no-repeat center/cover, linear-gradient(180deg, rgba(0, 0, 0, 0.320899) 0%, rgba(0, 0, 0, 0.244022) 100%);
+  background: url("../../images/bg_about.jpg") no-repeat center/cover, -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.320899)), to(rgba(0, 0, 0, 0.244022)));
+  background: url("../../images/bg_about.jpg") no-repeat center/cover, linear-gradient(180deg, rgba(0, 0, 0, 0.320899) 0%, rgba(0, 0, 0, 0.244022) 100%);
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -859,13 +893,15 @@
 }
 
 .about .info_box {
-  width: 55%;
+  width: 60%;
+  padding-top: 40px;
 }
 
 .about .pic {
   position: relative;
-  width: 45%;
+  width: 35%;
   max-width: 560px;
+  margin-left: 25px;
 }
 
 .about .pic img {
@@ -877,7 +913,7 @@
   position: relative;
   width: 100%;
   padding: 32px 38px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .about .about_txt li {
@@ -887,6 +923,7 @@
 .about .about_blod {
   font-size: 28px;
   font-weight: 700;
+  margin-bottom: 15px;
 }
 
 .about .text_indent {
@@ -950,6 +987,12 @@
   font-size: 16px;
 }
 
+@media screen and (max-width: 1440px) {
+  .footer {
+    padding: 40px 10px;
+  }
+}
+
 .footer .info_box {
   padding-top: 0;
 }
@@ -976,6 +1019,10 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 1;
 }
 
 .footer .school_group li + li {
@@ -999,7 +1046,7 @@
 }
 
 .footer .copyright {
-  margin-top: 35px;
+  margin-top: 60px;
   text-align: center;
 }
 
