--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -4,7 +4,7 @@
 	width: 100%;
 	height: 100%;
 	font-size: 20px;
-	padding-top: 90px;
+	padding-top: 70px;
 	
 	@include w768px{
 		padding-top: 55px;
@@ -21,18 +21,19 @@
 	padding-bottom: 40px;
 }
 .school .info_box{
+	padding-top: 40px;
 	padding-left: 130px;
 	padding-right: 130px;
 	@include w1440px{
-		padding-left: 35px;
-		padding-right: 35px;
+		padding-left: 50px;
+		padding-right: 50px;
 	}
 }
 .about .info_box{
 	padding-left: 130px;
 	padding-bottom: 70px;
 	@include w1440px{
-		padding-left: 35px;
+		padding-left: 60px;
 	}
 }
 .school .info_box{
@@ -50,12 +51,12 @@
 
 .title {
 	width: 100%;
-	height: 110px;
+	height: 80px;
 	color: $whtie;
-	font-size: 48px;
+	font-size: 45px;
 	font-weight: bold;
 	@include flex_c_c;
-	text-shadow: 0 0 2px #000;
+	text-shadow: 0 4px 4px rgba(0,0,0,.25);
 	/*@include w1280px{
 		font-size: 36px;
 		height: 80px;
@@ -68,7 +69,7 @@
 	z-index: 1;
 	left: 0;
 	width: 100%;
-	height: 90px;
+	height: 70px;
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 50px;
@@ -76,7 +77,7 @@
 	background: #fff;
 	.logo {
 		width: 185px;
-		height: 70px;
+		height: 50px;
 		background: #000;
 	}
 	.menu_btn{
@@ -123,21 +124,24 @@
 		ul {
 			display: flex;
 			font-size: 20px;
+			height: 100%;
 		}
 		li{
 			position: relative;
 			color: #2C2C2C;
 			transition-duration: .3s;
 			font-weight: 700;
+			display: flex;
+			align-items: center;
 		}
 		li::before,
 		li::after{
 			content:'';
 			position: absolute;
 			width: 50%;
-			height: 2px;
+			height: 1px;
 			background: $orange;
-			top: 80%;
+			top: 73%;
 			transition-duration: .3s;
 		}
 		li::before{
@@ -228,19 +232,26 @@
 .banner {
 	position: relative;
 	width: 100%;
-	height: calc( 100vh - 90px);
+	height: calc( 100vh - 70px);
 	// padding-bottom: calc(80% * 0.56);
 	background: url('../../images/banner_bg.jpg')no-repeat center/cover;
 	.banner_info{
 		position: absolute;
-		top: 90px;
+		top: 80px;
 		left: 170px;
 		img{
 			width: 40%;
 		}
+		@include w1440px{
+			img{
+				width: 38%;
+			}
+		}
 	}
 	.banner_txt{
-		margin-top: 50px;
+		.p1{
+			color:#3E3A39;
+		}
 		.p1,
 		.s1{
 			font-size: 56px;
@@ -250,12 +261,24 @@
 			font-size: 112px;
 			font-weight: 700;
 			color: $orange;
+			margin-left: 5px;
 		}
 		.p2{
+			text-align: center;
 			font-size: 36px;
 			color: #867976;
 			letter-spacing: 0.16em;
-			margin-top: 10px;
+			margin-top: 5px;
+		}
+		@include w1440px{
+			.p1,
+			.s1{
+				font-size: 50px;
+			
+			}
+			.p2{
+				font-size: 34px;
+			}
 		}
 	}
 	.banner_scoll{
@@ -266,8 +289,10 @@
 		bottom: 10%;
 		margin: 0 auto;
 		font-size: 36px;
-		color: #fff;
-		font-weight: 700;
+		color: rgba(255,255,255,.8);
+		font-weight: 500;
+		letter-spacing: 2px;
+		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 		&::before{
 			content:'';
 			display: block;
@@ -365,11 +390,13 @@
 		font-size: 50px;
 		padding: 10px;
 		display: inline-flex;
-		align-items: center;
+		align-items: flex-end;
 		&::after{
 			content:attr(data-text);
 			font-size: 20px;
 			color: #000;
+			margin-left: 10px;
+			margin-bottom: 5px;
 		}
 	}
 
@@ -399,7 +426,7 @@
 
 .flyer{
 	width: 100%;
-	height: calc(100vh - 90px);
+	height: calc(100vh - 70px);
 	background: url('../../images/flyer/bg_flyer.png')no-repeat right bottom/contain,
 	linear-gradient(90deg, #FFF3E6 -2.34%, #FFFFFF 50.96%, #FFFFFF 98.93%);
 	
@@ -409,7 +436,7 @@
 	}
 	.flyer_box {
 		max-width: 510px;
-		height: calc(100% - 110px - 138px);
+		height: calc(100% - 80px - 110px);
 		overflow: hidden;
 		margin: auto;
 	}
@@ -437,7 +464,7 @@
 		position: relative;
 		width: 100%;
 		max-width: 1100px;
-		height: 138px;
+		height: 110px;
 		background: #FFB057;
 		margin: auto;
 		@include flex_c_c;
@@ -447,8 +474,8 @@
 		li {
 			position: relative;
 			flex: none;
-			width: 90px;
-			height: 90px;
+			width: 80px;
+			height: 80px;
 			margin: 10px;
 			overflow: hidden;
 			border-radius: 10px;
@@ -519,6 +546,7 @@
 
 .leaderboard{
 	width: 100%;
+	// background: url('../../images/leaderboard/bg_leaderboard.jpg')no-repeat center bottom/cover;
 	background: url('../../images/leaderboard/bg_leaderboard_l.png')no-repeat center left/contain,
 				url('../../images/leaderboard/bg_leaderboard_r.png')no-repeat center right/contain;
 	.leaderboard_box{
@@ -527,6 +555,7 @@
 		overflow: hidden;
 		margin: auto;
 		padding-bottom: 40px;
+		
 		.pic{
 			display: flex;
 			width: 100%;
@@ -569,6 +598,10 @@
 			padding: 2px 75px 2px 35px ;
 			font-size: 20px;
 			font-weight: 700;
+			border-right: 2px solid #C4C4C4;
+			&:last-child{
+				border-right: none;
+			}
 			&::after{
 				content:'\25BA';
 				position: absolute;
@@ -584,13 +617,13 @@
 			@include w1280px{
 				width: calc(100% / 3 - 50px);
 				margin: 10px;
+				&:nth-child(3){
+					border-right:none;
+				}
 			}
 			@include w1024px{
 				padding: 2px 40px 2px 20px;
 			}
-		}
-		li+li{
-			border-left: 2px solid #C4C4C4;;
 		}
 	}
 	.school_int{
@@ -610,7 +643,7 @@
 	.school_txt{
 		position: absolute;
 		max-width: 535px;
-		right: 5%;
+		right: 0;
 		bottom: -5%;
 		.title{
 			color:#fff;
@@ -724,18 +757,20 @@
 	}
 }
 .about{
-	background: url('../../images/bg_about.png')no-repeat center/cover,
+	background: url('../../images/bg_about.jpg')no-repeat center/cover,
 	linear-gradient(180deg, rgba(0, 0, 0, 0.320899) 0%, rgba(0, 0, 0, 0.244022) 100%);
 	overflow: hidden;
 	display: flex;
 	flex-wrap: wrap;
 	.info_box{
-		width: 55%;
+		width: 60%;
+		padding-top: 40px;
 	}
 	.pic{
 		position: relative;
-		width: 45%;
+		width: 35%;
 		max-width: 560px;
+		margin-left: 25px;
 		img{
 			position: absolute;
 			bottom: 0;
@@ -745,7 +780,7 @@
 		position: relative;
 		width: 100%;
 		padding: 32px 38px;
-		background: rgba(255, 255, 255, 0.6);
+		background: rgba(255, 255, 255, 0.8);
 
 		li{
 			line-height: 40px;
@@ -754,6 +789,7 @@
 	.about_blod{
 		font-size: 28px;
 		font-weight: 700;
+		margin-bottom: 15px;
 	}
 	.text_indent{
 		text-indent: 45px;
@@ -800,6 +836,9 @@
 	width: 100%;
 	background: linear-gradient(106.56deg, #7D4A17 0%, #C68236 100%);
 	padding: 40px 80px;
+	@include w1440px{
+		padding: 40px 10px;
+	}
 	color: #fff;
 	font-size: 16px;
 	.info_box{
@@ -816,6 +855,8 @@
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: space-between;
+			align-items: center;
+			line-height: 1;
 		}
 		li+li{
 			margin-top: 15px;
@@ -835,7 +876,7 @@
 		}
 	}
 	.copyright{
-		margin-top: 35px;
+		margin-top: 60px;
 		text-align: center;
 	}
 	@include w1024px{
