--- a/style/css/all.css
+++ b/style/css/all.css
@@ -22,19 +22,6 @@
   padding-bottom: 40px;
 }
 
-.school .info_box {
-  padding-top: 40px;
-  padding-left: 130px;
-  padding-right: 130px;
-}
-
-@media screen and (max-width: 1440px) {
-  .school .info_box {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
-
 .about .info_box {
   padding-left: 130px;
   padding-bottom: 70px;
@@ -124,7 +111,7 @@
   display: none;
   position: relative;
   width: 50px;
-  height: 50px;
+  height: 40px;
 }
 
 .header .menu_btn::before {
@@ -134,8 +121,8 @@
   width: 100%;
   height: 4px;
   background: #000;
-  -webkit-box-shadow: 0 25px 0 #000;
-          box-shadow: 0 25px 0 #000;
+  -webkit-box-shadow: 0 19px 0 #000;
+          box-shadow: 0 19px 0 #000;
   border-radius: 50px;
   -webkit-transition-duration: .3s;
           transition-duration: .3s;
@@ -251,7 +238,7 @@
     background: #EF7E00;
     z-index: 2;
     right: -100%;
-    top: 90px;
+    top: 70px;
     -webkit-transition-duration: .3s;
             transition-duration: .3s;
   }
@@ -265,7 +252,9 @@
   .header .menu li {
     width: 100%;
     color: #fff;
-    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .header .menu li:hover {
     color: #fff;
@@ -279,9 +268,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .header {
-    height: 55px;
-  }
   .header .logo {
     width: 85px;
     height: 30px;
@@ -297,9 +283,6 @@
   }
   .header .menu_btn:after {
     height: 2px;
-  }
-  .header .menu {
-    top: 55px;
   }
 }
 
@@ -366,7 +349,7 @@
   text-align: center;
   left: 0;
   right: 0;
-  bottom: 10%;
+  bottom: 20%;
   margin: 0 auto;
   font-size: 36px;
   color: rgba(255, 255, 255, 0.8);
@@ -404,6 +387,17 @@
   }
 }
 
+.date_block {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(12.5%, rgba(255, 255, 255, 0.72)), color-stop(34.69%, rgba(255, 255, 255, 0.9)));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 12.5%, rgba(255, 255, 255, 0.9) 34.69%);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .date_block ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -415,7 +409,32 @@
 }
 
 .date_block li {
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 20px;
+}
+
+.date_block .br {
+  font-size: 0;
+}
+
+.date_block .br tt {
+  display: block;
+  font-size: 20px;
+}
+
+.date_block .icon_clock::before {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  background: url("../../images/icon_clock.svg") no-repeat center/cover;
+  margin-right: 15px;
 }
 
 .date_block .date_num {
@@ -462,6 +481,13 @@
             justify-content: center;
     padding: 0;
   }
+  .date_block .br tt {
+    display: inline-block;
+  }
+  .date_block .icon_clock::before {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -477,11 +503,6 @@
   background: url("../../images/flyer/bg_flyer.png") no-repeat right bottom/contain, linear-gradient(90deg, #FFF3E6 -2.34%, #FFFFFF 50.96%, #FFFFFF 98.93%);
 }
 
-.flyer .flyer_pic {
-  width: 68%;
-  margin: auto;
-}
-
 .flyer .flyer_box {
   max-width: 510px;
   height: calc(100% - 80px - 110px);
@@ -491,6 +512,7 @@
 
 .flyer .flyer_group {
   width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -505,6 +527,16 @@
 
 .flyer .flyer_item.on {
   display: block;
+}
+
+.flyer .flyer_pic {
+  height: calc( 100% - 70px);
+  text-align: center;
+}
+
+.flyer img {
+  width: auto;
+  height: 100%;
 }
 
 .flyer .flyer_txt {
@@ -671,6 +703,19 @@
   background: url("../../images/school/bg_school.jpg") no-repeat right bottom/contain;
 }
 
+.school .info_box {
+  padding-top: 40px;
+  padding-left: 130px;
+  padding-right: 130px;
+}
+
+@media screen and (max-width: 1440px) {
+  .school .info_box {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
 .school .school_name {
   margin-bottom: 40px;
 }
@@ -756,6 +801,12 @@
   padding: 20px 40px;
 }
 
+@media screen and (max-width: 1024px) {
+  .school .school_txt .title {
+    padding: 15px 20px;
+  }
+}
+
 .school .school_txt h1 {
   display: block;
   width: 100%;
@@ -776,12 +827,43 @@
   padding: 16px 38px 38px;
 }
 
+.school .school_info li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 26px;
+}
+
+.school .school_info li::before {
+  content: attr(data-text);
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
 .school .school_info li + li {
   margin-top: 25px;
 }
 
+@media screen and (max-width: 1024px) {
+  .school .school_info li + li {
+    margin-top: 15px;
+  }
+}
+
 .school .school_info li:last-child {
   text-align: right;
+}
+
+@media screen and (max-width: 1024px) {
+  .school .school_info {
+    padding: 15px 20px;
+  }
 }
 
 @media screen and (max-width: 1440px) {
@@ -790,6 +872,12 @@
   }
   .school .school_txt h2 {
     font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .school .school_txt {
+    max-width: 370px;
   }
 }
 
@@ -822,7 +910,7 @@
   position: relative;
   width: 100%;
   max-width: 1110px;
-  height: 138px;
+  height: 110px;
   background: #1E8E57;
   margin: auto;
   display: -webkit-box;
@@ -973,7 +1061,6 @@
   width: calc(100% / 3 - 30px);
   height: 85px;
   margin-bottom: 30px;
-  background: #fff;
   text-align: center;
   line-height: 85px;
   border-radius: 10px;
