--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -20,15 +20,7 @@
 	padding-top: 80px;
 	padding-bottom: 40px;
 }
-.school .info_box{
-	padding-top: 40px;
-	padding-left: 130px;
-	padding-right: 130px;
-	@include w1440px{
-		padding-left: 50px;
-		padding-right: 50px;
-	}
-}
+
 .about .info_box{
 	padding-left: 130px;
 	padding-bottom: 70px;
@@ -84,7 +76,7 @@
 		display: none;
 		position: relative;
 		width: 50px;
-		height: 50px;
+		height: 40px;
 	}
 	.menu_btn::before{
 		content:'';
@@ -93,7 +85,7 @@
 		width: 100%;
 		height: 4px;
 		background: #000;
-		box-shadow: 0 25px 0 #000;
+		box-shadow: 0 19px 0 #000;
 		border-radius: 50px;
 		transition-duration: .3s;
 	}
@@ -183,7 +175,7 @@
 			background: #EF7E00;
 			z-index: 2;
 			right: -100%;
-			top: 90px;
+			top: 70px;
 			transition-duration: .3s;
 		}
 		.active + .menu{
@@ -195,7 +187,7 @@
 		.menu li{
 			width: 100%;
 			color: #fff;
-			text-align: center;
+			justify-content: center;
 		}
 		.menu li:hover{
 			color: #fff;
@@ -208,7 +200,6 @@
 		}
 	}
 	@include w768px{
-		height: 55px;
 		.logo{
 			width: 85px;
 			height: 30px;
@@ -223,9 +214,6 @@
 		}
 		.menu_btn:after{
 			height: 2px;
-		}
-		.menu{
-			top: 55px;
 		}
 	}
 }
@@ -286,7 +274,7 @@
 		text-align: center;
 		left: 0;
 		right: 0;
-		bottom: 10%;
+		bottom: 20%;
 		margin: 0 auto;
 		font-size: 36px;
 		color: rgba(255,255,255,.8);
@@ -323,67 +311,39 @@
 			}
 		}
 	}
-	// @include w1440px{
-	// 	.banner_info{
-	// 		img{
-	// 			width: 30%;
-	// 		}
-	// 	}
-	// 	.banner_txt{
-	// 		.p1,
-	// 		.s1{
-	// 			font-size: 32px;
-	// 		}
-	// 		.s2{
-	// 			font-size: 78px;
-	// 		}
-	// 		.p2{
-	// 			font-size: 28px;
-	// 		}
-	// 	}
-	// }
-	// @include w1280px{
-	// 	.banner_info{
-	// 		top: 60px;
-	// 		left: 90px;
-	// 	}
-	// 	.banner_txt{
-	// 		margin-top: 25px;
-	// 	}
-	// }
-	// @include w1280px{
-	// 	.banner_info{
-	// 		top: 30px;
-	// 		left: 60px;
-	// 	}
-	// 	.banner_txt{
-	// 		.p1,
-	// 		.s1{
-	// 			font-size: 24px;
-	// 		}
-	// 		.s2{
-	// 			font-size: 48px;
-	// 		}
-	// 		.p2{
-	// 			font-size: 24px;
-	// 		}
-	// 	}
-	// 	.banner_scoll{
-	// 		font-size: 28px;
-	// 		&::before{
-	// 			top: 100%;
-	// 		}
-	// 	}
-	// }
 }
 .date_block {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	bottom: 0;
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 12.5%, rgba(255, 255, 255, 0.9) 34.69%);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 	ul{
 		display: flex;
 		justify-content: space-between;
 		padding: 0 50px;
 	}
 	li{
+		position: relative;
+		align-items: center;
+		display: flex;
 		font-size: 20px;
+	}
+	.br{font-size: 0;}
+	.br tt{
+		display: block;
+		font-size: 20px;
+	}
+
+	.icon_clock::before{
+		content:'';
+		display: block;
+		width: 25px;
+		height: 25px;
+		background: url('../../images/icon_clock.svg')no-repeat center/cover;
+		margin-right: 15px;
 	}
 	.date_num{
 		color: $orange;
@@ -416,6 +376,13 @@
 			justify-content: center;
 			padding: 0;
 		}
+		.br tt{
+			display: inline-block;
+		}
+		.icon_clock::before{
+			width: 20px;
+			height: 20px;
+		}
 	}
 	@include w1024px{
 		ul{
@@ -429,11 +396,7 @@
 	height: calc(100vh - 70px);
 	background: url('../../images/flyer/bg_flyer.png')no-repeat right bottom/contain,
 	linear-gradient(90deg, #FFF3E6 -2.34%, #FFFFFF 50.96%, #FFFFFF 98.93%);
-	
-	.flyer_pic{
-		width: 68%;
-		margin:auto;
-	}
+
 	.flyer_box {
 		max-width: 510px;
 		height: calc(100% - 80px - 110px);
@@ -442,6 +405,7 @@
 	}
 	.flyer_group {
 		width: 100%;
+		height: 100%;
 		display: flex;
 		margin-bottom: 40px;
 		transition-duration: .3s;
@@ -451,6 +415,15 @@
 	}
 	.flyer_item.on{
 		display: block;
+	}
+	.flyer_pic{
+		// 扣掉flyer_txt高度 加上 間距的高度
+		height: calc( 100% - 70px);
+		text-align: center;
+	}
+	img{
+		width: auto;
+		height: 100%;
 	}
 	.flyer_txt {
 		width: 100%;
@@ -480,14 +453,7 @@
 			overflow: hidden;
 			border-radius: 10px;
 		}
-		// @include w1280px{
-		// 	max-width: 768px;
-		// 	height: 98px;
-		// 	li{
-		// 		width: 60px;
-		// 		height: 60px;
-		// 	}
-		// }
+
 		button {
 			width: 15px;
 			height: 40px;
@@ -587,6 +553,15 @@
 .school{
 	width: 100%;
 	background: url('../../images/school/bg_school.jpg')no-repeat right bottom/contain;
+	.info_box{
+		padding-top: 40px;
+		padding-left: 130px;
+		padding-right: 130px;
+		@include w1440px{
+			padding-left: 50px;
+			padding-right: 50px;
+		}
+	}
 	.school_name{
 		margin-bottom: 40px;
 		ul{
@@ -652,6 +627,10 @@
 			background: rgba(239, 126, 0, .7);
 			display: block;
 			padding: 20px 40px;
+			
+			@include w1024px{
+				padding: 15px 20px;
+			}
 		}
 		h1{
 			display: block;
@@ -672,11 +651,31 @@
 	.school_info{
 		background: rgba(255, 255, 255, 0.9);
 		padding: 16px 38px 38px;
+		li{
+			display: flex;
+			align-items: center;
+			line-height: 26px;
+		}
+		li::before{
+			content: attr(data-text);
+			flex: none;
+			align-self: flex-start;
+		}
 		li+li{
 			margin-top: 25px;
 		}
+			
+		@include w1024px{
+			li+li{
+				margin-top: 15px;
+			}
+		}
 		li:last-child{
 			text-align: right;
+		}
+		
+		@include w1024px{
+			padding: 15px 20px;
 		}
 	}
 	
@@ -688,6 +687,12 @@
 			h2{
 				font-size: 24px;
 			}
+		}
+	}
+	
+	@include w1024px{
+		.school_txt {
+			max-width: 370px;
 		}
 	}
 }
@@ -714,7 +719,7 @@
 		position: relative;
 		width: 100%;
 		max-width: 1110px;
-		height: 138px;
+		height: 110px;
 		background: #1E8E57;
 		margin: auto;
 		@include flex_c_c;
@@ -825,7 +830,6 @@
 			width: calc(100% / 3 - 30px);
 			height: 85px;
 			margin-bottom: 30px;
-			background: #fff;
 			text-align: center;
 			line-height: 85px;
 			border-radius: 10px;
